in config: * show header ASAP * move compatibility toggle into the selector div, hide it by default, show on finding incompatible extension * add timeout before scrolling on page load * add more comments, log error object to console as well as the fact that an error occurred * use show/hide instead of slideDown/slideUp to reveal extension UIs * fix scrolling in to extension UI in `open_ext_ui_and_scroll` * don't add icons when icon field evaluates to false (e.g. missing, empty, null) * use edited link hashes to avoid browser jumping * fix bug in error report for unnamed parameter * create elements in template rather than js where possible * rename class used to identify extension UIs, to simplify jQuery selectors * prevent default events for clicking nav links, since they can intermittently prevent the desired behaviour * set default options for `open_ext_ui` function * access parameters of objects using . syntax * add params to extension object rather than create local vars * make better ids for extension names

--- a/nbextensions/config/main.css
+++ b/nbextensions/config/main.css
@@ -15,9 +15,10 @@
 }
 
 .nbext-showhide-incompat {
-    margin: 1em 0.5em 0.5em;
-    float: left;
-    clear: both;
+    padding-bottom: 0.5em;
+    /* the selector is hidden by default, revealed by js if any incompatible
+       extensions are found */
+    display: none;
 }
 
 /* styles for the extension-selector nav links */
